Fix image vertical alignment problem on some browsers

--- a/photos/css/style.css
+++ b/photos/css/style.css
@@ -42,8 +42,6 @@
     display: block;
     /* For centering purposes. */
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .view h2 {
